-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: client-libs
-
b25
I have observed a situation where MTLLayer fails to create a CVDisplayLink after receiving a notification of screen wakeup. The problem is that CVDisplayLinkCreateWithActiveCGDisplays fails if there are no active displays, and there is apparently a race condition between the screen wakeup notification and the update to the list of active displays that can produce this outcome. Retry has been successful.
- relates to
-
JDK-8318125 [macos] application creates unlimited number of CVDisplayLink threads
-
- Open
-
-
JDK-8304825 MacOS metal pipeline - window isn't painted if created during display sleep
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/a50d3bee
-
Review(master)
openjdk/jdk/25342