8312198: [macos] metal pipeline - window rendering stops after display sleep